# diesel-builders

./: .gitignore  Cargo.toml  README.md  measure_compile_times.sh  rustc-ice-2025-11-29T21_31_47-872790.txt  rustc-ice-2025-12-24T17_18_15-1128941.txt  rustc-ice-2025-12-24T17_19_11-1144106.txt
diesel-additions/: Cargo.toml  README.md
diesel-additions/src/: columns.rs  flat_insert.rs  foreign_key.rs  get_column.rs  get_set_columns.rs  insert.rs  insertable_table_model.rs  key.rs  lib.rs  rust_sql_type.rs  set_column.rs  table_addition.rs  table_inherits.rs  table_model.rs  tables.rs  typed_column.rs  utils.rs
diesel-additions/src/get_column/: for_tuple.rs
diesel-additions/src/set_column/: for_tuple.rs
diesel-additions/src/utils/: clonable_tuple.rs  default_tuple.rs  extend_tuple.rs  option_tuple.rs  ref_tuple.rs  tuple_impls.rs
diesel-additions/tests/: test_rust_sql_type.rs
diesel-builders/: Cargo.toml  README.md
diesel-builders-derive/: Cargo.toml
diesel-builders-derive/src/: const_validator.rs  descendant.rs  fpk.rs  lib.rs  table_model.rs  utils.rs
diesel-builders-derive/src/table_model/: accumulated_traits.rs  attribute_parsing.rs  foreign_keys.rs  get_column.rs  may_get_columns.rs  primary_key.rs  set_columns.rs  table_generation.rs  typed_column.rs  vertical_same_as.rs
diesel-builders-macros/: Cargo.toml  README.md
diesel-builders-macros/src/: const_validator.rs  descendant.rs  fpk.rs  impl_generators.rs  lib.rs  table_model.rs  tuple_generator.rs  utils.rs
diesel-builders-macros/src/table_model/: attribute_parsing.rs  foreign_keys.rs  get_column.rs  may_get_columns.rs  maybe_nullable.rs  primary_key.rs  set_columns.rs  table_generation.rs  typed_column.rs  vertical_same_as.rs
diesel-builders-macros/tests/: compile_tests.rs
diesel-builders/src/: ancestors.rs  buildable_columns.rs  buildable_table.rs  buildable_tables.rs  builder_bundle.rs  builder_error.rs  bundlable_tables.rs  columns.rs  flat_insert.rs  foreign_key.rs  get_builder.rs  get_column.rs  get_foreign.rs  get_model.rs  get_set_columns.rs  horizontal_same_as.rs  horizontal_same_as_group.rs  insertable_table_model.rs  lib.rs  load_nested_query_builder.rs  load_query_builder.rs  nested_buildable_tables.rs  nested_bundlable_tables.rs  nested_insert.rs  set_builder.rs  set_column.rs  table_addition.rs  table_builder.rs  table_model.rs  table_models.rs  tables.rs  typed.rs  typed_column.rs  utils.rs  vertical_same_as.rs  vertical_same_as_group.rs
diesel-builders/src/builder_bundle/: completed_table_builder_bundle.rs  core_traits.rs  serde.rs
diesel-builders/src/columns/: columns_collection.rs  homogeneously_typed_columns.rs  homogeneously_typed_nested_columns.rs  maybe_nullable.rs  nested_columns.rs  nested_columns_collection.rs  non_empty_nested_projection.rs  non_empty_projection.rs  tuple_eq_all.rs  tuple_to_order.rs
diesel-builders/src/foreign_key/: iter_foreign_key.rs
diesel-builders/src/get_builder/: for_tuple.rs
diesel-builders/src/get_column/: blanket_impls.rs  dynamic.rs  dynamic_multi.rs
diesel-builders/src/get_set_columns/: get_nested_columns.rs  may_get_nested_columns.rs  may_set_nested_columns.rs  set_homogeneous_nested_columns.rs  set_nested_columns.rs  try_may_set_discretionary_same_as_nested_columns.rs  try_may_set_nested_columns.rs  try_set_discretionary_same_as_nested_columns.rs  try_set_homogeneous_nested_columns.rs  try_set_homogeneous_nested_columns_collection.rs  try_set_mandatory_same_as_nested_columns.rs  try_set_nested_columns.rs  try_set_nested_columns_collection.rs  tuple_get_nested_columns.rs  tuple_may_get_nested_columns.rs
diesel-builders/src/load_nested_query_builder/: nested_inner_join.rs  nested_select.rs
diesel-builders/src/set_builder/: for_tuple.rs
diesel-builders/src/table_builder/: completed_table_builder.rs  core_traits.rs  nested_table_builder.rs  serde.rs
diesel-builders/src/tables/: has_nested_tables.rs  nested_tables.rs  non_composite_primary_key_tables.rs
diesel-builders/src/typed/: homogeneously_typed_nested_tuple.rs  homogeneously_typed_tuple.rs  typed_nested_tuple.rs  typed_nested_tuple_collection.rs  typed_tuple.rs
diesel-builders/src/utils/: copiable_tuple.rs  debuggable_tuple.rs  eq_tuple.rs  hash_tuple.rs  option_tuple.rs  ord_tuple.rs  partial_eq_tuple.rs  partial_ord_tuple.rs
diesel-builders/tests/: compile_tests.rs  shared.rs  shared_animals.rs  shared_triangular.rs  test_base_case.rs  test_builder_error.rs  test_check_constraints.rs  test_composite_primary_key.rs  test_custom_type.rs  test_dag.rs  test_decoupled.rs  test_defaults.rs  test_discretionary_triangular_relation.rs  test_dynamic_nullable.rs  test_empty_tuple_implementations.rs  test_foreign_key_inheritance.rs  test_inheritance.rs  test_inheritance_chain.rs  test_iter_foreign_key.rs  test_iter_foreign_key_inheritance.rs  test_load.rs  test_mandatory_triangular_relation.rs  test_mandatory_vertical_same_as.rs  test_mixed_triangular_relations.rs  test_new_animal_error_display.rs  test_new_cat_error.rs  test_nullable_foreign_key.rs  test_one_to_many.rs  test_self_referential_foreign_key.rs  test_simplest_compilable_insert.rs  test_single_column_root.rs  test_table_model_insertable_override.rs  test_triangular_many.rs  test_try_from.rs  test_vertical_same_as.rs
diesel-builders/tests/common/: mod.rs
diesel-builders/tests/ui/: ancestor_is_self_error.rs  ancestor_is_self_error.stderr  discretionary_missing_table_error.stderr  duplicate_discretionary_error.stderr  duplicate_infallible_error.rs  duplicate_infallible_error.stderr  duplicate_infallible_mixed_error.stderr  duplicate_mandatory_error.rs  duplicate_mandatory_error.stderr  duplicate_sql_type_error.stderr  fail_ambiguous_discretionary_same_as.stderr  fail_ambiguous_mandatory_same_as.stderr  fail_duplicate_same_as_discretionary.rs  fail_duplicate_same_as_discretionary.stderr  fail_duplicate_same_as_mandatory.rs  fail_duplicate_same_as_mandatory.stderr  fail_struct_default_mandatory.rs  fail_struct_default_mandatory.stderr  fail_struct_default_not_ancestor.stderr  invalid_default_validation_error.rs  (+33 more)
(+143 files in other folders)
