[package]
name = "diesel-additions"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel.workspace = true
anyhow.workspace = true
typed_tuple.workspace = true
diesel-builders-macros.workspace = true
chrono = { version = "0.4", optional = true, default-features = false }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.0", optional = true }
bigdecimal = { version = "0.4", optional = true }
ipnetwork = { version = "0.20", optional = true }

[features]
default = ["chrono"]
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]
sqlite = ["diesel/sqlite"]
numeric = ["bigdecimal"]

[lints]
workspace = true