[package]
name = "diesel-builders-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for diesel-builders workspace"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild.workspace = true
diesel.workspace = true
diesel-builders.workspace = true
typed_tuple.workspace = true
anyhow.workspace = true

[lints]
workspace = true
