[package]
name = "diesel-builders"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel.workspace = true
typed_tuple.workspace = true
tuple_set.workspace = true
diesel-builders-macros.workspace = true

[dev-dependencies]
diesel = { workspace = true, features = [
	"sqlite",
	"returning_clauses_for_sqlite_3_35",
	"extras",
] }

[lints]
workspace = true

[features]
default = ["size-32"]
size-16 = ["diesel-builders-macros/size-16"]
size-32 = ["diesel-builders-macros/size-32"]
size-64 = ["diesel-builders-macros/size-64"]
size-128 = ["diesel-builders-macros/size-128"]
