[package]
name = "diesel-builders"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel.workspace = true
diesel-builders-macros.workspace = true
serde = { workspace = true, optional = true }
tuplities.workspace = true
typenum.workspace = true

[dev-dependencies]
diesel = { workspace = true, features = [
	"sqlite",
	"returning_clauses_for_sqlite_3_35",
	"extras",
] }
serde_json.workspace = true

[lints]
workspace = true

[features]
default = ["serde"]
size-16 = ["diesel-builders-macros/size-16", "tuplities/size-16"]
size-32 = ["diesel-builders-macros/size-32", "tuplities/size-32"]
size-48 = ["diesel-builders-macros/size-48", "tuplities/size-48"]
size-64 = ["diesel-builders-macros/size-64", "tuplities/size-64"]
size-96 = ["diesel-builders-macros/size-96", "tuplities/size-96"]
size-128 = ["diesel-builders-macros/size-128", "tuplities/size-128"]
serde = ["dep:serde"]